[gd_scene load_steps=4 format=3 uid="uid://qad1g2kbaoan"]

[ext_resource type="Script" path="res://scenes/objeto.gd" id="1_ekv24"]
[ext_resource type="Texture2D" uid="uid://bku6xhvtbsoua" path="res://art/mug.jpg" id="2_jpn7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ngaa"]
size = Vector2(336, 336)

[node name="Objeto" type="Node2D"]
script = ExtResource("1_ekv24")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_jpn7g")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4ngaa")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="Sprite2D" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
